@@ -30,6 +30,9 @@ Version 1.13.8+dev:
      possible to obtain the password from preferences, but it's no longer as
      trivial as before.
 
+ * Performance:
+   * Rewrote the FPS cap implementation. This greatly improves smoothness ingame.
+
  * User Interface:
    * Unit recall dialog now sorts the units by both level and required XP for
      their next level-up (issue #1738).
