@@ -186,20 +186,6 @@ game_launcher::game_launcher(const commandline_options& cmdline_opts, const char
 		video().set_fullscreen(true);
 	if (cmdline_opts_.load)
 		load_data_.reset(new savegame::load_game_metadata{ *cmdline_opts_.load });
-	if (cmdline_opts_.max_fps) {
-		int fps;
-		//FIXME: remove the next line once the weird util.cpp specialized template lexical_cast_default() linking issue is solved
-		fps = lexical_cast_default<int>("", 50);
-		fps = *cmdline_opts_.max_fps;
-		fps = std::min<int>(fps, 1000);
-		fps = std::max<int>(fps, 1);
-		fps = 1000 / fps;
-		// increase the delay to avoid going above the maximum
-		if(1000 % fps != 0) {
-			++fps;
-		}
-		preferences::set_draw_delay(fps);
-	}
 	if (cmdline_opts_.nogui || cmdline_opts_.headless_unit_test) {
 		no_sound = true;
 		preferences::disable_preferences_save();
