@@ -49,8 +49,6 @@ bool no_preferences_save = false;
 
 bool fps = false;
 
-int draw_delay_ = 20;
-
 config prefs;
 }
 
@@ -977,16 +975,6 @@ bool show_fps()
 void set_show_fps(bool value)
 {
 	fps = value;
-}
-
-int draw_delay()
-{
-	return draw_delay_;
-}
-
-void set_draw_delay(int value)
-{
-	draw_delay_ = value;
 }
 
 bool use_color_cursors()
