@@ -38,6 +38,8 @@ Version 1.13.8+dev:
    * When set to remember your password, Wesnoth now encrypts it. It is still
      possible to obtain the password from preferences, but it's no longer as
      trivial as before.
+ * Performance:
+   * Rewrote the FPS cap implementation. This greatly improves smoothness ingame.
  * Units:
    * Added new lvl0 Giant Scorpling, leveling into the Giant Scorpion.
  * User Interface:
@@ -53,6 +55,8 @@ Version 1.13.8+dev:
  * Miscellaneous and Bug Fixes:
    * Add --report/-R command line switch for printing the same report from the
      Game Version dialog's clipboard function to stdout.
+   * Removed the --max-fps command line switch. The new FPS cap implementation
+     queries the screen refresh rate instead.
  * WFL Engine
    * Add owner key to terrain space callable, for villages
    * Location formulas in [tunnel] now have a teleport_unit variable
